MCR-3432_Updating classifications with the restapi can lead broken classifications (#2527)